# simple-3d-renderer

./: CMakeLists.txt
src/math/: Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h
